adapt holder for actions