@@ -19,49 +19,49 @@ import net.minecraft.client.gui.components.*;
 import net.minecraft.client.gui.components.events.GuiEventListener;
 import net.minecraft.client.gui.narration.NarratableEntry;
 import net.minecraft.client.gui.screens.controls.KeyBindsScreen;
+import net.minecraft.core.Holder;
 import net.minecraft.network.chat.Component;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.neoforged.neoforge.client.gui.widget.ExtendedButton;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
-public class EditSelectActionScreen<T extends IFactionPlayer<T>> extends ReorderingGuiRadialMenu<IAction<?>> {
+public class EditSelectActionScreen<T extends IFactionPlayer<T>> extends ReorderingGuiRadialMenu<Holder<IAction<?>>> {
 
     public static void show() {
         FactionPlayerHandler.get(Minecraft.getInstance().player).getCurrentFactionPlayer().ifPresent(factionPlayer -> Minecraft.getInstance().setScreen(new EditSelectActionScreen(factionPlayer)));
     }
 
-    private static void drawActionPart(@Nullable IAction<?> action, GuiGraphics graphics, int posX, int posY, int size, boolean transparent) {
+    private static void drawActionPart(@Nullable Holder<IAction<?>> action, GuiGraphics graphics, int posX, int posY, int size, boolean transparent) {
         if (action == null) return;
         graphics.blit(getActionIcon(action), posX, posY, 0, 0, 0, 16, 16, 16, 16);
     }
 
-    private static ResourceLocation getActionIcon(IAction<?> action) {
-        ResourceLocation id = RegUtil.id(action);
-        return new ResourceLocation(id.getNamespace(), "textures/actions/" + id.getPath() + ".png");
+    private static ResourceLocation getActionIcon(Holder<IAction<?>> action) {
+        return action.unwrapKey().map(ResourceKey::location).map(s -> s.withPath("textures/actions/" + s.getPath() + ".png")).orElseThrow();
     }
 
-    private static <T extends IFactionPlayer<T>> boolean isEnabled(T player, @NotNull IAction<?> item) {
-        return player.getActionHandler().isActionUnlocked((IAction) item);
+    @SuppressWarnings("unchecked")
+    private static <T extends IFactionPlayer<T>> boolean isEnabled(T player, @NotNull Holder<IAction<?>> item) {
+        return player.getActionHandler().isActionUnlocked((Holder<IAction<T>>) (Object) item);
     }
 
-    private static <T extends IFactionPlayer<T>> ItemOrdering<IAction<?>> getOrdering(T player) {
-        return new ItemOrdering<>(ClientConfigHelper.getActionOrder(player.getFaction()).stream().filter(s -> s.showInSelectAction(player.asEntity())).toList(), new ArrayList<>(), () -> ModRegistries.ACTIONS.stream().filter(action -> action.matchesFaction(player.getFaction())).filter(s -> s.showInSelectAction(player.asEntity())).toList());
+    private static <T extends IFactionPlayer<T>> ItemOrdering<Holder<IAction<?>>> getOrdering(T player) {
+        return new ItemOrdering<>(ClientConfigHelper.getActionOrder(player.getFaction()).stream().filter(s -> s.value().showInSelectAction(player.asEntity())).toList(), new ArrayList<>(), () -> ModRegistries.ACTIONS.holders().filter(action -> action.value().matchesFaction(player.getFaction())).filter(s -> s.value().showInSelectAction(player.asEntity())).collect(Collectors.toList()));
     }
 
-    private static <T extends IFactionPlayer<T>> void saveOrdering(T player, ItemOrdering<IAction<?>> ordering) {
+    private static <T extends IFactionPlayer<T>> void saveOrdering(T player, ItemOrdering<Holder<IAction<?>>> ordering) {
         ClientConfigHelper.saveActionOrder(player.getFaction().getID(), ordering.getOrdering());
     }
 
     private KeyBindingList keyBindingList;
 
     public EditSelectActionScreen(T player) {
-        super(getOrdering(player), action -> action.getName().plainCopy(), EditSelectActionScreen::drawActionPart, (ordering) -> saveOrdering(player, ordering), (item) -> EditSelectActionScreen.isEnabled(player, item));
+        super(getOrdering(player), action -> action.value().getName().plainCopy(), EditSelectActionScreen::drawActionPart, (ordering) -> saveOrdering(player, ordering), (item) -> EditSelectActionScreen.isEnabled(player, item));
     }
 
     @Override
@@ -149,12 +149,12 @@ public class EditSelectActionScreen<T extends IFactionPlayer<T>> extends Reorder
 
             private final int index;
             private final KeyMapping keyMapping;
-            private IAction<?> action;
+            private Holder<IAction<?>> action;
             private StringWidget stringWidget;
             private ImageWidget imageWidget;
             private ImageButton imageButton;
 
-            public KeyBindingSetting(int index, KeyMapping keyMapping, IAction<?> action) {
+            public KeyBindingSetting(int index, KeyMapping keyMapping, Holder<IAction<?>> action) {
                 this.index = index;
                 this.keyMapping = keyMapping;
                 this.stringWidget = new StringWidget(0,2,80, 20, keyMapping.getTranslatedKeyMessage(), Minecraft.getInstance().font);
@@ -175,13 +175,13 @@ public class EditSelectActionScreen<T extends IFactionPlayer<T>> extends Reorder
                 return false;
             }
 
-            private void switchAction(@Nullable IAction<?> action) {
+            private void switchAction(@Nullable Holder<IAction<?>> action) {
                 applyAction(action);
                 VampirismMod.proxy.sendToServer(new ServerboundActionBindingPacket(this.index, this.action));
                 FactionPlayerHandler.get(Minecraft.getInstance().player).setBoundAction(this.index, this.action, false, false);
             }
 
-            private void applyAction(@Nullable IAction<?> action) {
+            private void applyAction(@Nullable Holder<IAction<?>> action) {
                 this.action = action;
                 if (action != null) {
                     this.imageWidget = ImageWidget.texture(16, 16, getActionIcon(action), 16, 16);
